--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,17 @@
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
     <build>
